# Primusbackend

./: .gitignore  Software_Architecture_Doc_Template.docx  list.txt  load_test.py  loadtest_only.sh  migrate_pg.sh  run_load_test.sh  run_tests.sh  setup_backend_for_loadtest.sh  setup_observability.sh  test_universal_login.py
PrimusClient/src-tauri/: Cargo.toml  tauri.conf.json
PrimusClient/src-tauri/src/: main.rs
PrimusClient/src-tauri/target_new/: .rustc_info.json
PrimusClient/src-tauri/target_new/release/.fingerprint/aho-corasick-492b79865646ce53/: lib-aho_corasick  lib-aho_corasick.json
PrimusClient/src-tauri/target_new/release/.fingerprint/autocfg-e137e6ca9ebf7b6a/: lib-autocfg  lib-autocfg.json
PrimusClient/src-tauri/target_new/release/.fingerprint/bitflags-b6602a6522c7ba4b/: lib-bitflags  lib-bitflags.json
PrimusClient/src-tauri/target_new/release/.fingerprint/byteorder-c28b66a3d1b8bea8/: lib-byteorder  lib-byteorder.json
PrimusClient/src-tauri/target_new/release/.fingerprint/byteorder-f81eec70149406a7/: lib-byteorder  lib-byteorder.json
PrimusClient/src-tauri/target_new/release/.fingerprint/cc-2f1bd2a4dbb6b338/: output-lib-cc
PrimusClient/src-tauri/target_new/release/.fingerprint/cfg-if-5e7ef755ffcb9fc5/: lib-cfg_if  lib-cfg_if.json
PrimusClient/src-tauri/target_new/release/.fingerprint/cfg-if-ffb8e38b1e3e67a8/: lib-cfg_if  lib-cfg_if.json
PrimusClient/src-tauri/target_new/release/.fingerprint/convert_case-2b53f36db12a3df8/: lib-convert_case  lib-convert_case.json
PrimusClient/src-tauri/target_new/release/.fingerprint/crc32fast-f90a5aa28c6f6e58/: build-script-build-script-build  (+1 more)
PrimusClient/src-tauri/target_old_20251222124229/: .rustc_info.json
(+1365 files in other folders)
